Fix spacing between headlines and section headings

--- a/less/components/typography.less
+++ b/less/components/typography.less
@@ -37,6 +37,9 @@ a {
 h1, h2, h3, h4, h5, h6 {
     margin-top: @leading;
 }
+div.primary > h2:first-child, div.secondary > h2:first-child {
+    margin-top: 0;
+}
 
 // space after all paragraphs
 ol + p,
